# buildbridge

./: .env.example  .eslintrc.cjs  .gitignore  .prettierignore  Cargo.toml  README.md  commitlint.config.cjs  package-lock.json  package.json  render.yaml  turbo.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
apps/api/: jest.config.js  package.json  tsconfig.json  tsup.config.ts
apps/api/src/: index.ts  types.d.ts
apps/api/src/__tests__/: auth.test.ts  health.test.ts  investor.test.ts  jwt.test.ts  milestone.test.ts  pitch-service.test.ts  pitch.test.ts  profile.test.ts  stellar-verify.test.ts
apps/api/src/db/: client.ts  schema.prisma  seed.ts  supabase.ts
apps/api/src/lib/: investor-service.ts  jwt.ts  milestone-service.ts  pitch-service.ts  profile-service.ts  sentry.ts  sse.ts  stellar-verify.ts
apps/api/src/middleware/: auth.ts  error-handler.ts  not-found.ts
apps/api/src/routes/: auth.ts  health.ts  investor.ts  milestone.ts  pitch.ts  profile.ts
apps/web/: README.md  next.config.js  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vercel.json
apps/web/e2e/: api.spec.ts  landing.spec.ts  pages.spec.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/context/: auth-context.tsx  theme-context.tsx
apps/web/src/hooks/: use-founder.ts  (+6 more)
contracts/: README.md  deploy.sh
contracts/milestone-tracker/: Cargo.toml
contracts/milestone-tracker/src/: lib.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  SCF_SUBMISSION.md  SESSIONS.md  SUPABASE.md
(+50 files in other folders)
